--- a/animals.html
+++ b/animals.html
@@ -33,6 +33,82 @@
          <div class="col-md">Elephant</div>
      </div> 
   </div>
+  <p> Ensuing to seeing the after effect of the above code. 
+      At whatever point I start decreasing the above page I came to understand that the Animals segment is breaking 
+      first since we have used col-md for the creatures line. cold-md infers portion medium.
+      If we use col-md the areas will be level when the width is >= 764px. If we use col-sm(column little) 
+      the areas will turn out to be level when the width is >=576px 
+      we have used col-sm for the letters row.
+      So when we start reducing the size of the page when the page size comes to 768px 
+      the animlas segment will change over into vertical then aftre continuing with 
+      the lessening framework again when the size comes to 768px the letters line will change over into vertical. 
+      So this is the inspiration driving why the animals line will initial believers into vertical.
+  </p>
+
+  <div class="container">
+    <img src="image/rabbit.jpg" class="img-fluid" height="400" width="400">
+    <img src="image/monkey.jpg" class="img-fluid" height="400" width="400">
+    <img src="image/jumbo.jpg" class="img-fluid" height="400" width="400">
+  </div>
+
+  <div class="container">
+    <img src="image/rabbit.jpg" class="img-thumbnail" height="150" width="150">
+    <img src="image/monkey.jpg" class="img-thumbnail" height="150" width="150">
+    <img src="image/jumbo.jpg" class="img-thumbnail" height="150" width="150">
+  </div>
+
+  <table class="table">
+    <caption>Letter,Animal,City,Car</caption>
+    <thead>
+      <tr>
+        <th scope="col">Letter</th>
+        <th scope="col">Animal</th>
+        <th scope="col">City</th>
+        <th scope="col">Car</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">R</th>
+        <td>Ragdoll</td>
+        <td>Reno</td>
+        <td>Ranz</td>
+      </tr>
+
+      <tr>
+        <th scope="row">A</th>
+        <td>Abyssinian</td>
+        <td>Amarillo</td>
+        <td>Acura</td>
+      </tr>
+
+      <tr>
+        <th scope="row">M</th>
+        <td>Mamba</td>
+        <td>Madrid</td>
+        <td>Maserati</td>
+      </tr>
+
+      <tr>
+        <th scope="row">I</th>
+        <td>Irish WolfHound</td>
+        <td>Ipoh</td>
+        <td>Irizar</td>
+      </tr>
+
+      <tr>
+        <th scope="row">N</th>
+        <td>Narwhal</td>
+        <td>Newark</td>
+        <td>Nexo</td>
+      </tr>
+
+      <tr>
+        <th scope="row">E</th>
+        <td>Earwig</td>
+        <td>Esenler</td>
+        <td>Eicher</td>
+      </tr>
 
 </body>
 </html>
