--- a/animals.html
+++ b/animals.html
@@ -109,6 +109,32 @@
         <td>Esenler</td>
         <td>Eicher</td>
       </tr>
+</tbody>
+  </table>
 
+  <div>
+    <button type="button" class="btn">R</button>
+    <button type="button" class="btn">A</button>
+    <button type="button" class="btn">M</button>
+    <button type="button" class="btn">I</button>
+    <button type="button" class="btn">N</button>
+    <button type="button" class="btn">E</button>
+  </div>
+  <div class="btn-toolbar">
+    <div class="btn-group" role="group" aria-label="first group">
+      <button type="button" class="btn btn-success">R</button>
+      <button type="button" class="btn btn-success">A</button>
+      <button type="button" class="btn btn-success">M</button>
+    </div>
+
+    <div cclass="btn-group" role="group" aria-label="second group">
+      <button type="button" class="btn btn-warning">I</button>
+      <button type="button" class="btn btn-warning">N</button>
+    </div>
+    <div cclass="btn-group" role="group" aria-label="third group">
+      <button type="button" class="btn btn-danger">E</button>
+    </div>
+
+  </div>
 </body>
 </html>
