--- a/animals.html
+++ b/animals.html
@@ -136,5 +136,17 @@
     </div>
 
   </div>
+
+  <div class="dropdown">
+    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+      Select Page
+    </a>
+  
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+      <li><a class="dropdown-item" href="plane.html">Plane Page</a></li>
+      <li><a class="dropdown-item" href="train.html">Train Page</a></li>
+      
+    </ul>
+  </div>
 </body>
 </html>
